<resources>
    <string name="app_name">Zeiterfassung</string>
    <string name="version">Version 1.23</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_projects_view">Projekte</string>
    <string name="menu_send">Senden</string>
    <string name="menu_exit">Verlassen</string>
    <string name="menu_test_k2soap">Test K2Soap</string>
    <string name="choose">Wählen</string>
    <string name="app_end">Programm beenden</string>
    <string name="title_activity_choose_task">Wählen Sie die Tätigkeit</string>
    <string name="tvSystemSettings">Systemeinstellungen</string>
    <string name="tvServerAddress">Server-Adresse</string>
    <string name="tvMailAddress">Mail-Adresse</string>
    <string name="tvChoiceKind">Art der Auswahl (Projekt)</string>
    <string name="rbClick">Click</string>
    <string name="rbDoubleClick">Doppelklick</string>
    <string name="rbMenu">Menu (über Auswahl)</string>
    <string name="tvSendKind">Senden der Buchungen</string>
    <string name="rbDirect">Sofort</string>
    <string name="rbAtEnd">Beim Beenden</string>
    <string name="rbManually">Manual</string>
    <string name="loadData">Daten laden</string>
    <string name="test">Einstellungen testen</string>
    <string name="cancel">Abbruch</string>
    <string name="settingsTitle">Einstellungen bearbeiten</string>
    <string name="chooseStandIn">Vertretung wählen</string>
    <string name="chooseSubworker">Mitarbeiter wählen</string>
    <string name="chooseProject">Objekt</string>
    <string name="shownObjects">Angezeigte Objekte</string>
    <string name="chooseAllObjects">Alle Objekte</string>
    <string name="chooseMyObjects">Meine Objekte</string>
    <string name="chooseStandInObjects">Vertretungs-Objekte</string>
    <string name="chooseBoth">Meine+Vertretung</string>
    <string name="MPZE_TITLE">MPZE-A</string>
    <string name="logo_company">Logo SWG Schweinfurg</string>
    <string name="app_subtitle">Mobile Projektzeiterfassung</string>
    <string name="app_subtitle1">für Android</string>
    <string name="copyright_1">Copyright 2013 – 2016 by CiSoft</string>
    <string name="copyright2">und Stadt- und Wohnbau Schweinfurt</string>
    <string name="btOk">O K</string>
    <string name="title_mpze">MPZE-A</string>
    <string name="save_settings">Einstellungen speichern</string>
    <string name="longClick">Langer Druck</string>
    <string name="viewComment">Kommentar anzeigen</string>
    <string name="enterSearchText">Suchtext bitte eingeben</string>
    <string name="menu_show_bookings">Buchungen anzeigen</string>
    <string name="extended_bookings">Erweiterte Auswertungen</string>
    <string name="tvChoiceTaskKind">Art der Auswahl (Tätigkeit)</string>
    <string name="rbMenue">Menü</string>
    <string name="rbButton">Zusatzbutton</string>
    <string name="lbDeviceId">Geräte (Primion) ID</string>
    <string name="stdDeviceId">200</string>
    <string name="menu_show_more">Weitere &#8230;</string>
    <string name="menu_book_subworker">Gehilfen buchen</string>
    <string name="chooseLastWorkend">Ihre letzte Buchung fand vor mehr als 8 Stunden statt</string>
    <string name="isOk">Ist in Ordnung</string>
    <string name="timeEnteredBelow">Ich habe die Zeit unterhalb eingegeben</string>
    <string name="colon">:</string>
    <string name="WidgetLabel">Zeiterfassung</string>
    <string name="none_user_choosen">Keine Vertretung gewählt</string>
    <string name="clear">Auswahl löschen</string>
    <string name="widget_label">Buchungen erfassen</string>
    <string name="widget_booking_list_label">Buchungen listen</string>
    <string name="booking_widget_description">Zeiterfassung-Buchungserfassung</string>
    <string name="booking_list_widget_description">Zeiterfassung-Buchungsliste</string>
    <string name="reload_setting">Stammdaten holen</string>
    <string name="rebooking">Nachbuchen</string>
    <string name="booking_resend_title">Buchungen nachsenden</string>
    <string name="from_label">Von:</string>
    <string name="to_label">Bis</string>
    <string name="loremIpsum">Lorem Ipsum</string>
    <string name="back_button">Zurück</string>
    <string name="back_arrows">&lt;---</string>
    <string name="cbTaskChoiceIcons">Tätigkeitsliste mit Icons</string>
    <string name="loadIcons">Lade Icons</string>
    <string name="workEnd">Arbeitsende</string>
    <string name="send_mail">Als Mail versenden</string>
    <string name="exception_text">Fehlertext</string>
    <string name="machine_info">Geräteinformationen</string>
    <string name="show_task_end_panel">Tätigkeit explizit beenden</string>
    <string name="breakBegin">Pause</string>
    <string name="breakEnd">Pausenende</string>
	<string name="chooseAction">Wollen Sie die Tätigkeit\n%s\nwirklich buchen?</string>
	<string name="taskNotFound">Task für die id %d konnte ncht gefunden werden</string>
	<string name="chooseTask">"Bitte wählen Sie eine Tätigkeit aus!</string>
	<string name="ListElement">Listen-Element</string>
	<string name="mn_about">Über…</string>
	<string name="about">Über MPZE</string>
	<string name="send_all">Alle senden</string>
	<string name="send_not_sent">Noch nicht versandte</string>
	<string name="show_search_field">Suchern</string>
	<string name="menu_logs">Logs...</string>
    <string name="resend_bookings">Buchungen versenden</string>
</resources>