<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/editBooking" android:titleCondensed="Edit" android:orderInCategory="100" android:title="Editieren"></item>
    <item android:id="@+id/insertBooking" android:titleCondensed="Einfügen" android:orderInCategory="200" android:title="Buchung einfügen"></item>
    <item android:id="@+id/deleteBooking" android:orderInCategory="250" android:title="Buchung löschen"></item>
    <item android:id="@+id/rebooking" android:title="@string/rebooking" android:orderInCategory="300"></item>
    <item android:id="@+id/extendedBookings" android:orderInCategory="400" android:title="@string/extended_bookings"></item>
    <item android:id="@+id/cancel" android:orderInCategory="500" android:title="@string/cancel"></item>
    <item android:id="@+id/Exit" android:title="@string/app_end" android:orderInCategory="999"></item>
</menu>