<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvWidget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseLastWorkend"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/rgChooseIfBookWorkend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="-1" >

        <RadioButton
            android:id="@+id/rbIsOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/isOk" />

        <RadioButton
            android:id="@+id/rbEnter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeEnteredBelow" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/etTimeHr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_vertical|right"
            android:inputType="number"
            android:maxLength="2"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tvColon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_medium"
            android:paddingRight="@dimen/padding_medium"
            android:text="@string/colon"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/etTimeMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_vertical|left"
            android:inputType="number"
            android:maxLength="2"
            android:visibility="invisible" >

        </EditText>

    </LinearLayout>

</LinearLayout>