<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvWaitTaskEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_weight="10"
            android:text="@string/exception_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/btSendMail"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="50dp"
            android:layout_weight="10"
            android:text="@string/send_mail" />

    </LinearLayout>

    <EditText
        android:id="@+id/etMainExceptionStackTrace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.41"
        android:ems="10"
        android:enabled="false"
        android:inputType="textMultiLine"
        android:selectAllOnFocus="true" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/machine_info"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etMachineInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.41"
        android:ems="10"
        android:enabled="false"
        android:inputType="textMultiLine"
        android:selectAllOnFocus="true" />

</LinearLayout>